@@ -1,3 +1,7 @@
+2001-05-07  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
+
+	* ldgram.y: Fix typo.
+
 2001-05-03  H.J. Lu  <hjl@gnu.org>
 
 	* emultempl/elf32.em: Include "libiberty.h".
